# RichesReach

./: .dockerignore  .easignore  .gitattributes  .gitignore  .main_server_note.md  100_PERCENT_REAL_DATA_SUMMARY.md  ADDITIONAL_IMPROVEMENTS.md  ADVANCED_AI_INTEGRATION.md  ADVANCED_ANALYSIS_FIX.md  ADVANCED_SECURITY.md  AI_INSIGHTS_FIX.md  AI_ML_COMPLIANCE_SUMMARY.md  AI_ML_RECOMMENDATION_SYSTEM_EXPLAINED.md  AI_RECOMMENDATIONS_PERFORMANCE_ANALYSIS.md  AI_RECOMMENDATIONS_TEST_RESULTS.md  AI_RECOMMENDATIONS_TEST_SUMMARY.md  AI_SCANS_OPTIONS_COPILOT_IMPLEMENTATION.md  AI_SCANS_OPTIONS_NAVIGATION_GUIDE.md  ALGORITHM_ANALYSIS_SUMMARY.md  ALL_LEVEL_UP_FEATURES_COMPLETE.md  ALL_TESTS_COMPLETE.md  ALPACA_CONNECT_ACCOUNT_CREATION_STRATEGY.md  ALPACA_CONNECT_INTEGRATION_COMPLETE.md  ALPACA_CONNECT_OAUTH_GUIDE.md  API_AUDIT_CHECKLIST.md  API_ENABLED_STATUS.md  API_ENDPOINT_AUDIT_REPORT.md  API_INTEGRATION_COMPLETE.md  API_SETUP_GUIDE.md  API_VERIFICATION_SUMMARY.md  AUTHENTICATION_FIX.md  AUTHENTICATION_FIXED.md  AWS_DEPLOYMENT_STATUS.md  AWS_POSTGRES_DEPLOYMENT_GUIDE.md  AllowSecretsGet.json  ApolloProvider.tsx  App.tsx  BACKEND_ALL_ERRORS_SUMMARY.md  BACKEND_BUILD_ERRORS.md  BACKEND_BUILD_STATUS.md  (+812 more)
.github/: dependabot.yml
.husky/: pre-commit
backend/: .ci-ping  .dockerignore  .env  .env.backup  .env.production  .env.production.fixed  .gitattributes  =2.31.0  =3.1.0  =4.0.0  =4.2.0  API_KEYS_SETUP_GUIDE.md  API_TESTING_RESULTS.md  APP_STORE_LISTING.md  AWS_PRODUCTION_GUIDE.md  BACKEND_LOGGING_ENHANCED.md  Dockerfile  Dockerfile.ai-router  Dockerfile.fast  Dockerfile.optimized  Dockerfile.prod  Dockerfile.production  Dockerfile.simple  EAS_BUILD_WEB_INSTRUCTIONS.md  ENTERPRISE_IMPROVEMENTS_SUMMARY.md  EXCEPTION_LOGGING_STATUS.md  FILES_TO_REMOVE.md  FRONTEND_INTEGRATION_SUMMARY.md  GOOGLE_PLAY_PUBLIC_RELEASE_GUIDE.md  JACKSONVILLE_MEETING_COVER_LETTER.md  JACKSONVILLE_MEETING_TRACKER.md  JACKSONVILLE_PILOT_ONEPAGER.md  ML_ENHANCEMENT_README.md  Makefile  OPENAI_CONFIG_TEMPLATE.md  README.md  (+221 more)
backend/backend/backend/rust_stock_engine/: Cargo.toml  README.md  improvements.md  test_improved.rs
backend/backend/backend/rust_stock_engine/src/: api.rs  config.rs  crypto_analysis.rs  hardened_main.rs  main.rs  options_calculator.rs  websocket.rs
backend/hft/rust-executor/: Cargo.toml
backend/hft/rust-executor/benches/: hft_bench.rs
backend/hft/rust-executor/src/: engine.rs  lib.rs  main.rs  replay.rs
backend/hft/rust-executor/src/adapters/: alpaca_gateway.rs  polygon_feed.rs
edge_physics/: Cargo.toml
edge_physics/src/: black_scholes.rs  lib.rs  repair_engine.rs
rust_crypto_engine/: Cargo.toml
rust_crypto_engine/migrations/: 001_create_market_quotes.sql
rust_crypto_engine/src/: alpha_oracle.rs  backtesting.rs  correlation_analysis.rs  cross_asset.rs  crypto_analysis.rs  execution.rs  feature_sources.rs  forex_analysis.rs  main.rs  metrics.rs  ml_models.rs  options_analysis.rs  options_core.rs  options_edge.rs  options_engine.rs  options_feature_source.rs  portfolio_memory.rs  position_sizing.rs  quant_terminal.rs  raha_regime_integration.rs  regime.rs  reinforcement_learning.rs  risk_guard.rs  safety_guardrails.rs  sentiment_analysis.rs  stock_analysis.rs  unified_asset_oracle.rs  websocket.rs
rust_crypto_engine/src/market_data/: cached.rs  correlation_adapter.rs  factory.rs  in_memory.rs  in_memory_options.rs  mod.rs  options_provider.rs  postgres.rs  provider.rs
rust_crypto_engine/src/utils/: mod.rs  stats.rs
(+4913 files in other folders)
