[package]
name = "crypto_analysis_engine"
version = "1.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rand = "0.8"
rust_decimal = { version = "1.0", features = ["serde"] }

# High-performance data structures
dashmap = "5.0"
crossbeam = "0.8"
rayon = "1.0"
thiserror = "1.0"

# WebSocket support
futures-util = "0.3"
tokio-tungstenite = "0.20"

# Simple ML libraries for crypto analysis
ndarray = "0.15"
ndarray-rand = "0.14"

# Production-grade features
governor = "0.6"
nonzero_ext = "0.3"
base64 = "0.22"
url = "2"
async-trait = "0.1"

# Optional: Postgres/Timescale support
# To enable, uncomment the sqlx dependency below and add the postgres feature:
# sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "rust_decimal", "macros"], optional = true }
#
# [features]
# default = []
# postgres = ["sqlx"]