[package]
name = "richesreach-exec"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
crossbeam-queue = "0.3"
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lazy_static = "1.4"
rand = "0.8"
core_affinity = "0.8"
libc = "0.2"
bytemuck = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "hft_bench"
harness = false
