[package]
name = "stock_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client for API calls
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Technical analysis indicators
ta = "0.5"

# Web framework for API endpoints
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
config = "0.14"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Math utilities
num-traits = "0.2"

# Options analysis dependencies
statrs = "0.16"  # Statistical functions for Black-Scholes

# Additional dependencies for improved version

# Hardened service dependencies
warp = "0.3"
futures-util = "0.3"
governor = "0.6"
nonzero_ext = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
